# java_bazel

./: README.md
app1/: .gitignore  MODULE.bazel  bazel-app1  bazel-bin  bazel-out  bazel-testlogs
app1/src/main/java/com/ejemplo/app1/: BUILD  Calculadora.java  Main.java
app1/src/test/java/com/ejemplo/app1/: BUILD  MainTest.java
app2/: bazel-app2  bazel-bin  bazel-out  bazel-testlogs
app2/src/main/java/com/ejemplo/app2/: Area.java  BUILD  Main.java
app2/src/test/java/com/ejemplo/app2/: BUILD  MainTest.java
app2/test/java/com/ejemplo/app2/: BUILD
mi-proyecto-java-bazel/: bazel-bin  bazel-mi-proyecto-java-bazel  bazel-out  bazel-testlogs  profile.json
mi-proyecto-java-bazel/app1/: WORKSPACE  bazel-app1  bazel-bin  bazel-out  bazel-testlogs
mi-proyecto-java-bazel/app1/src/main/java/com/ejemplo/app1/: BUILD
mi-proyecto-java-bazel/app1/test/java/com/ejemplo/app1/: BUILD  MainTest.java
mi-proyecto-java-bazel/app2/: WORKSPACE  bazel-out  bazel-testlogs
mi-proyecto-java-bazel/app2/test/java/com/ejemplo/app2/: MainTest.java
mi-proyecto-java-bazel/src/main/java/com/ejemplo/app/: BUILD  Calculadora.java  Main.java
mi-proyecto-java-bazel/src/test/java/com/ejemplo/app/: BUILD  MainTest.java
